Created USER and Organization which extends UserBase, and added Authorities to the application.