@@ -11,9 +11,18 @@ import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public enum ERole {
-    ROLE_USER(Collections.emptySet()),
-    ROLE_ORGANIZATION(
-            Set.of(Permission.ROLE_ORGANIZATION_READ,Permission.ROLE_ORGANIZATION_UPDATE,Permission.ROLE_ORGANIZATION_DELETE,Permission.ROLE_ORGANIZATION_CREATE)
+    USER(Collections.emptySet()),
+    ORGANIZATION(
+            Set.of(Permission.ORGANIZATION_READ,Permission.ORGANIZATION_UPDATE,Permission.ORGANIZATION_DELETE,Permission.ORGANIZATION_CREATE)
+    ),
+    ORGANIZATION_USER(
+            Set.of(Permission.ORGANIZATION_READ)
+    ),
+    ORGANIZATION_MANAGER(
+            Set.of(Permission.ORGANIZATION_READ,Permission.ORGANIZATION_CREATE)
+    ),
+    ORGANIZATION_ADMIN(
+            Set.of(Permission.ORGANIZATION_READ,Permission.ORGANIZATION_CREATE,Permission.ORGANIZATION_UPDATE)
     ),
     ROLE_ADMIN(Collections.emptySet());
 
@@ -22,10 +31,10 @@ public enum ERole {
 
     public List<SimpleGrantedAuthority> getAuthorities() {
         List<SimpleGrantedAuthority> authorities = getPermissions()
-                .stream().map(permission -> new SimpleGrantedAuthority(permission.name()))
+                .stream().map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
                 .collect(Collectors.toList());
 
-        authorities.add(new SimpleGrantedAuthority(this.name()));
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     };
 
